opam-version: "2.0"
synopsis: "Pipeline language for keeping things up-to-date"
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocaml-ci/ocurrent"
bug-reports: "https://github.com/ocaml-ci/ocurrent/issues"
dev-repo: "git+https://github.com/ocaml-ci/ocurrent.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "fmt"
  "bos"
  "ppx_deriving"
  "lwt"
  "cmdliner"
  "sqlite3"
  "duration"
  "prometheus"
  "dune"
  "re"
  "lwt-dllist"
  "alcotest-lwt" {with-test}
]
