opam-version: "2.0"
synopsis: "ANSI escape sequence parser"
description: """
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides a basic ANSI escape parser,
allowing the OCurrent web UI to show logs in colour."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocurrent/ocurrent"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
doc: "https://ocurrent.github.io/ocurrent/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "astring"
  "fmt"
  "tyxml"
  "dune" {>= "1.9"}
]
