opam-version: "2.0"
synopsis: "OCurrent Docker plugin"
description: """
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides a plugin for interacting with Docker.
It can pull, build, run and push images, and can coordinate
multiple Docker Engine instances."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocurrent/ocurrent"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
doc: "https://ocurrent.github.io/ocurrent/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "current" {= version}
  "current_git" {= version}
  "ocaml" {>= "4.08.0"}
  "fmt"
  "ppx_deriving"
  "lwt"
  "dockerfile"
  "ppx_deriving_yojson" {>= "3.5.1"}
  "yojson"
  "dune" {>= "2.0"}
]
