opam-version: "2.0"
synopsis: "Example pipelines for OCurrent"
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocaml-ci/current"
bug-reports: "https://github.com/ocaml-ci/current/issues"
dev-repo: "git+https://github.com/ocaml-ci/current.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "fmt"
  "lwt"
  "cmdliner"
  "duration"
  "current" {= version}
  "current_web" {= version}
  "current_git" {= version}
  "current_github" {= version}
  "current_docker" {= version}
  "current_rpc" {= version}
  "capnp-rpc-unix" {>= "0.3.3"}
  "dune"
]
