opam-version: "2.0"
synopsis: "Example pipelines for OCurrent"
description: """
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides some example pipelines.
It exists mainly to test the integration of various OCurrent
plugins."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocurrent/ocurrent"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
doc: "https://ocurrent.github.io/ocurrent/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "fmt"
  "lwt"
  "cmdliner"
  "duration"
  "current" {= version}
  "current_web" {= version}
  "current_git" {= version}
  "current_github" {= version}
  "current_docker" {= version}
  "current_rpc" {= version}
  "capnp-rpc-unix" {>= "0.5"}
  "dune" {>= "2.0"}
]
