opam-version: "2.0"
synopsis: "Example pipelines for OCurrent"
description: """\
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides some example pipelines.
It exists mainly to test the integration of various OCurrent
plugins."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
license: "Apache-2.0"
homepage: "https://github.com/ocurrent/ocurrent"
doc: "https://ocurrent.github.io/ocurrent/"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "fmt" {>= "0.8.9"}
  "lwt"
  "cmdliner" {>= "1.1.0"}
  "duration"
  "current" {= version}
  "current_web" {= version}
  "current_git" {= version}
  "current_github" {= version}
  "current_gitlab" {= version}
  "current_docker" {= version}
  "current_rpc" {= version}
  "capnp-rpc-unix" {>= "0.5"}
  "dune" {>= "2.9"}
  "capnp-rpc" {>= "0.8.0"}
  "capnp-rpc-lwt" {>= "0.8.0"}
  "capnp-rpc-net" {>= "0.8.0"}
  "dockerfile" {>= "7.0.0"}
  "fpath" {>= "0.7.3"}
  "logs" {>= "0.7.0"}
  "ppx_deriving" {>= "5.1"}
  "ppx_deriving_yojson" {>= "3.6.1"}
  "prometheus" {>= "0.7"}
  "result" {>= "1.5"}
  "routes" {>= "0.8.0"}
  "uri" {>= "4.0.0"}
  "yojson" {>= "1.7.0"}
  "prometheus-app" {>= "1.0" & < "1.2"}
  "mdx" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
