opam-version: "2.0"
synopsis: "Git plugin for OCurrent"
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/talex5/ocurrent"
bug-reports: "https://github.com/talex5/ocurrent/issues"
dev-repo: "git+https://github.com/talex5/ocurrent.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "current" {= version}
  "ocaml" {>= "4.08.0"}
  "fmt"
  "ppx_deriving"
  "lwt"
  "irmin-watcher"
  "ppx_deriving_yojson" {>= "3.5.1"}
  "yojson"
  "dune" {build}
]
