opam-version: "2.0"
synopsis: "Git plugin for OCurrent"
description: """
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides primitives for interacting with Git.
It can pull from remote repositories, or monitor local ones for changes."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocurrent/ocurrent"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
doc: "https://ocurrent.github.io/ocurrent/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "current" {= version}
  "ocaml" {>= "4.08.0"}
  "fmt"
  "ppx_deriving"
  "lwt"
  "irmin-watcher"
  "ppx_deriving_yojson" {>= "3.5.1"}
  "yojson"
  "dune" {>= "1.9"}
]
