opam-version: "2.0"
synopsis: "Git plugin for OCurrent"
description: """\
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides primitives for interacting with Git.
It can pull from remote repositories, or monitor local ones for changes."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocurrent/ocurrent"
doc: "https://ocurrent.github.io/ocurrent/"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
depends: [
  "current" {= version}
  "ocaml" {>= "4.08.0"}
  "conf-git"
  "fmt" {>= "0.8.9"}
  "ppx_deriving"
  "lwt"
  "irmin-watcher"
  "ppx_deriving_yojson" {>= "3.5.1"}
  "yojson"
  "dune" {>= "2.0"}
  "astring" {>= "0.8.5"}
  "bos" {>= "0.2.0"}
  "fpath" {>= "0.7.3"}
  "logs" {>= "0.7.0"}
  "result" {>= "1.5"}
  "cstruct" {>= "6.0.0"}
  "mirage-crypto" {>= "0.8.0"}
  "mdx" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
license: "Apache-2.0"
