opam-version: "2.0"
synopsis: "GitHub plugin for OCurrent"
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocaml-ci/ocurrent"
bug-reports: "https://github.com/ocaml-ci/ocurrent/issues"
dev-repo: "git+https://github.com/ocaml-ci/ocurrent.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "current" {= version}
  "current_git" {= version}
  "ocaml" {>= "4.08.0"}
  "fmt"
  "lwt"
  "yojson"
  "cohttp-lwt-unix"
  "nocrypto"
  "x509" {>= "0.7.0"}
  "tls"
  "dune"
]
