opam-version: "2.0"
synopsis: "GitHub plugin for OCurrent"
description: """
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides primitives for interacting with GitHub.
It can monitor and clone remote GitHub repositories, and can
push GitHub status messages to show the results of testing
PRs and branches."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocurrent/ocurrent"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "current" {= version}
  "current_git" {= version}
  "ocaml" {>= "4.08.0"}
  "fmt"
  "lwt"
  "yojson"
  "cohttp-lwt-unix"
  "mirage-crypto"
  "mirage-crypto-pk"
  "x509" {>= "0.7.0"}
  "tls"
  "dune" {>= "1.9"}
]
