opam-version: "2.0"
synopsis: "GitLab plugin for OCurrent"
description: """\
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides primitives for interacting with GitLab.
It can monitor and clone remote GitLab repositories, and can
push GitLab status messages to show the results of testing
PRs and branches."""
maintainer: "timmcgil@gmail.com"
authors: "timmcgil@gmail.com"
homepage: "https://github.com/ocurrent/ocurrent"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
depends: [
  "current" {= version}
  "current_git" {= version}
  "current_web" {= version}
  "ocaml" {>= "4.08.0"}
  "fmt" {>= "0.8.9"}
  "lwt"
  "yojson"
  "cohttp-lwt-unix" {>= "4.0.0"}
  "dune" {>= "2.0"}
  "gitlab-unix" {>= "0.1.0"}
  "cmdliner" {>= "1.0.4"}
  "logs" {>= "0.7.0"}
  "ppx_deriving_yojson" {>= "3.6.1"}
  "prometheus" {>= "0.7"}
  "result" {>= "1.5"}
  "rresult" {>= "0.6.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
license: "Apache-2.0"
