opam-version: "2.0"
synopsis: "Self-adjusting computations"
description: """\
This is a small, self-contained library for self-adjusting (incremental) computations.
It was written for OCurrent, but can be used separately too.

It is similar to Jane Street's incremental library, but much smaller and
has no external dependencies.

It is also similar to the react library, but the results do not depend on the
behaviour of the garbage collector. In particular, functions stop being called
as soon as they are no longer needed."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocurrent/ocurrent"
doc: "https://ocurrent.github.io/ocurrent/"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0"}
  "alcotest" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
license: "Apache-2.0"
