opam-version: "2.0"
synopsis: "OCurrent Linting plugin"
maintainer: "me@craigfe.io"
authors: "me@craigfe.io"
homepage: "https://github.com/ocaml-ci/current"
bug-reports: "https://github.com/ocaml-ci/current/issues"
dev-repo: "git+https://github.com/ocaml-ci/current.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "current" {= version}
  "current_git" {= version}
  "current_docker" {= version}
  "fmt"
  "ppx_deriving"
  "lwt"
  "dockerfile"
  "ppx_deriving_yojson" {>= "3.5.1"}
  "yojson"
  "dune"
]
