opam-version: "2.0"
synopsis: "Cap'n Proto RPC plugin for OCurrent"
description: """
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides a Cap'n Proto RPC interface, allowing
an OCurrent engine to be controlled remotely."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocurrent/ocurrent"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "capnp-rpc-lwt" {>= "0.4"}
  "fpath"
  "dune" {>= "1.9"}
]
