opam-version: "2.0"
synopsis: "Cap'n Proto RPC plugin for OCurrent"
description: """\
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides a Cap'n Proto RPC interface, allowing
an OCurrent engine to be controlled remotely."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
license: "Apache-2.0"
homepage: "https://github.com/ocurrent/ocurrent"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "capnp" {>= "3.4.0"}
  "capnp-rpc" {>= "0.8.0"}
  "capnp-rpc-lwt" {>= "0.4"}
  "fpath"
  "dune" {>= "2.9"}
  "fmt" {>= "0.8.9"}
  "logs" {>= "0.7.0"}
  "lwt" {>= "5.3.0"}
  "result" {>= "1.5"}
  "stdint" {>= "0.7.0"}
]
conflicts: [
  "x509" {= "0.11.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
