opam-version: "2.0"
synopsis: "Slack plugin for OCurrent"
description: """
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides primitives for interacting with Slack.
It can post messages to slack channels."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocurrent/ocurrent"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "current" {= version}
  "ocaml" {>= "4.08.0"}
  "fmt"
  "yojson"
  "lwt"
  "tls"
  "cohttp-lwt-unix"
  "dune"
]
