opam-version: "2.0"
synopsis: "Slack plugin for OCurrent"
description: """\
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides primitives for interacting with Slack.
It can post messages to slack channels."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocurrent/ocurrent"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
depends: [
  "current" {= version}
  "ocaml" {>= "4.08.0"}
  "fmt" {>= "0.8.9"}
  "yojson"
  "lwt"
  "tls" {>= "0.12.0"}
  "cohttp" {>= "2.2.0" & < "3.0.0"}
  "cohttp-lwt" {>= "2.2.0" & < "3.0.0"}
  "cohttp-lwt-unix" {>= "2.2.0" & < "3.0.0"}
  "dune" {>= "2.0"}
  "logs" {>= "0.7.0"}
  "uri" {>= "4.0.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
license: "Apache-2.0"
