opam-version: "2.0"
synopsis: "Slack plugin for OCurrent"
description: """\
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides primitives for interacting with Slack.
It can post messages to slack channels."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
license: "Apache-2.0"
homepage: "https://github.com/ocurrent/ocurrent"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
depends: [
  "current" {= version}
  "ocaml" {>= "4.08.0"}
  "fmt" {>= "0.8.9"}
  "yojson"
  "lwt" {>= "5.6.1"}
  "tls" {>= "0.12.0"}
  "cohttp-lwt-unix" {>= "4.0.0"}
  "dune" {>= "3.3"}
  "logs" {>= "0.7.0"}
  "uri" {>= "4.0.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
