opam-version: "2.0"
synopsis: "OCurrent SSH plugin"
description: """\
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides a plugin for running ssh commands."""
maintainer: "mark.elvers@tunbury.org"
authors: "mark.elvers@tunbury.org"
license: "Apache-2.0"
homepage: "https://github.com/ocurrent/ocurrent"
doc: "https://ocurrent.github.io/ocurrent/"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
depends: [
  "current" {= version}
  "ocaml" {>= "4.08.0"}
  "yojson"
  "dune" {>= "3.3"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
