opam-version: "2.0"
synopsis: "Test web UI for OCurrent"
description: """\
OCurrent provides an OCaml eDSL for writing CI/CD pipelines.

This package provides a basic web UI for service administrators.
It shows the current pipeline visually and allows viewing job
logs and configuring the log analyser."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
license: "Apache-2.0"
homepage: "https://github.com/ocurrent/ocurrent"
bug-reports: "https://github.com/ocurrent/ocurrent/issues"
depends: [
  "crunch" {>= "3.3.0" & build}
  "current" {= version}
  "ansi" {>= "0.5.0"}
  "ocaml" {>= "4.08.0"}
  "ppx_deriving_yojson" {>= "3.5.1"}
  "base64"
  "session"
  "session-cohttp-lwt"
  "mirage-crypto" {>= "0.8.7"}
  "mirage-crypto-rng"
  "fmt" {>= "0.8.9"}
  "bos"
  "lwt" {>= "5.6.1"}
  "multipart_form-lwt" {>= "0.4.0"}
  "cmdliner" {>= "1.1.0"}
  "prometheus" {>= "0.7"}
  "prometheus-app" {>= "1.2"}
  "cohttp-lwt-unix" {>= "4.0.0"}
  "tyxml" {>= "4.4.0"}
  "csv" {>= "2.4"}
  "routes" {>= "0.8.0"}
  "dune" {>= "3.3"}
  "conf-graphviz"
  "astring" {>= "0.8.5"}
  "conduit-lwt-unix" {>= "2.2.2"}
  "cstruct" {>= "5.2.0"}
  "fpath" {>= "0.7.3"}
  "logs" {>= "0.7.0"}
  "ppx_deriving" {>= "5.1"}
  "ppx_sexp_conv" {>= "v0.14.1"}
  "re" {>= "1.9.0"}
  "result" {>= "1.5"}
  "sexplib" {>= "v0.14.0"}
  "sqlite3" {>= "5.0.2"}
  "uri" {>= "4.0.0"}
  "yojson" {>= "1.7.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/ocurrent/ocurrent.git"
