(library
 (public_name current_rpc)
 (name current_rpc)
 (libraries
   capnp
   capnp-rpc
   capnp-rpc-lwt
   fmt
   fpath
   logs
   lwt
   result
   stdint)
 (flags (:standard -w -53-55)))

(rule
 (targets schema.ml schema.mli)
 (deps schema.capnp)
 (action (run capnpc -o %{bin:capnpc-ocaml} %{deps})))
