(library
 (public_name current_rpc)
 (name current_rpc)
 (libraries capnp capnp-rpc capnp-rpc-lwt capnp-rpc-unix cmdliner current_cache current_term fmt fpath logs lwt result stdint uri)
 (flags
  (:standard -w -53-55-67)))

(rule
 (targets schema.ml schema.mli)
 (deps schema.capnp)
 (action
  (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))
