(library
 (public_name current_web)
 (libraries
   astring
   bos
   cmdliner
   cohttp
   cohttp-lwt
   cohttp-lwt-unix
   conduit-lwt-unix
   current
   current.cache
   current.term
   current_ansi
   fmt
   fpath
   logs
   lwt
   lwt.unix
   ppx_sexp_conv.runtime-lib
   prometheus
   prometheus-app
   re
   result
   routes
   sexplib
   sqlite3
   tyxml
   tyxml.functor
   uri))
