(executables
  (names test test_monitor test_cache)
  (modules test test_monitor test_cache test_job test_log_matcher driver)
  (libraries current fmt fmt.tty logs.fmt bos lwt.unix alcotest-lwt
             current_fs
             current_docker_test
             current_git_test
             current_opam_test))

(executable
 (name gen_dune_rules)
 (modules gen_dune_rules)
 (libraries fmt fpath))

(include dune.inc)

(rule
 (targets dune.gen)
 (deps
  (source_tree .))
 (action
  (with-stdout-to
   %{targets}
   (run ./gen_dune_rules.exe))))

(alias
 (name runtest)
 (action
  (diff dune.inc dune.gen)))
