(executables
 (names test test_monitor test_cache)
 (modules test test_monitor test_cache test_job test_log_matcher driver)
 (libraries
   alcotest
   alcotest-lwt
   astring
   bos
   current
   current.cache
   current.term
   current_docker_test
   current_fs
   current_git_test
   current_opam_test
   duration
   fmt
   fmt.tty
   fpath
   logs.fmt
   lwt
   lwt.unix
   result
   ppx_deriving.runtime))

(executable
 (name gen_dune_rules)
 (modules gen_dune_rules)
 (libraries fmt))

(include dune.inc)

(rule
 (targets dune.gen)
 (deps
  (source_tree .))
 (action
  (with-stdout-to
    %{targets}
   (run ./gen_dune_rules.exe))))

(alias
 (name runtest)
 (action
  (diff dune.inc dune.gen)))
